fix/community-rspec-and-css

--- a/app/views/public/chat_rooms/show.html.haml
+++ b/app/views/public/chat_rooms/show.html.haml
@@ -6,7 +6,7 @@
   .row
     .col-md-3
       .partner-index-container
-        %p チャットができるアーティスト
+        %p 個別チャットができるアーティスト
         %strong
           = @mathing_customers.size.to_s + '人'
         - @mathing_customers.each do |matching_customer|
