--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -42,7 +42,7 @@
             = link_to "マイページ", public_customer_path(current_customer), data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
         %li
           - if current_customer.present?
-            = link_to "チャットする", public_matchings_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+            = link_to "個別チャット", public_matchings_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
         %li
           %i.fa-solid.fa-right-from-bracket
           = link_to "ログアウト", destroy_customer_session_path, data: { 'turbolinks': false }, method: :delete, class: "btn btn-secondary menu-sp-btn"
@@ -65,4 +65,4 @@
           = link_to "マイページ", public_customer_path(current_customer), data: { 'turbolinks': false }, class: "btn btn-info"
       %li
         - if current_customer.present?
-          = link_to "チャットする", public_matchings_path, data: { 'turbolinks': false }, class: "btn btn-info"
+          = link_to "個別チャット", public_matchings_path, data: { 'turbolinks': false }, class: "btn btn-info"
