--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,9 @@
 %html
   %head
     %meta{:content => "text/haml; charset=UTF-8mb4", "http-equiv" => "Content-Type"}/
-    %title BeMyStyle
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
+    %meta{:content => "好きで繋がった仲間は一生もの。音楽人の為のコミュニティアプリです。", :name => "description"}/
+    %title BeMyStyle
     = favicon_link_tag'favicon.ico'
     = csrf_meta_tags
     = csp_meta_tag
