--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -62,3 +62,86 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  .activity-index-head-title{
+    text-align: center;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .activity-index-create-btn{
+      margin-left: 20px;
+    }
+  }
+  .activity-index-container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 auto;
+    justify-content: center;
+    .img-container{
+      width: 300px;
+      height: 300px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+    }
+    .text-container{
+      width: 350px;
+      margin-bottom: 5px;
+      .activity-index-link{
+        position: absolute;
+        left: 70px;
+        bottom: 5px;
+      }
+    }
+  }
+}
+
+.activity-new-edit-title{
+  width: 90%;
+  text-align: center;
+  margin: 0 auto;
+  .alert{
+    text-align: center;
+    color: red;
+    border: solid 1px red;
+    border-radius: 10px;
+  }
+}
+
+.activity-new-edit-container{
+  width: 90%;
+  margin: 0 auto;
+  .activity-new-edit-table{
+    border: thick double lightblue;
+    .new-img{
+      width: 300px;
+      object-fit: cover;
+      border-radius: 10px;
+      padding: 5px;
+    }
+  }
+  .activity-new-edit-btn{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    display: block;
+    width: 200px;
+    margin-left: auto;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    border-radius: 10px;
+  }
+}
+
+input[type="text"] {
+  width: 90%;
+  height: 40px;
+}
