--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -43,7 +43,7 @@
         %li
           = link_to "個別チャット", public_matchings_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
         %li
-          = link_to "皆んなの活動報告", public_activities_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+          = link_to "みんなの活動報告", public_activities_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
         %li
           %i.fa-solid.fa-right-from-bracket
           = link_to "ログアウト", destroy_customer_session_path, data: { 'turbolinks': false }, method: :delete, class: "btn btn-secondary menu-sp-btn"
@@ -67,4 +67,4 @@
       %li
         = link_to "個別チャット", public_matchings_path, data: { 'turbolinks': false }, class: "btn btn-info"
       %li
-        = link_to "皆んなの活動報告", public_activities_path, data: { 'turbolinks': false }, class: "btn btn-info"
+        = link_to "みんなの活動報告", public_activities_path, data: { 'turbolinks': false }, class: "btn btn-info"
