feature/see-more-at-activity-index

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -34,6 +34,22 @@ font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN", Meiryo, Arial, sans
   color: red; 
 }
 
+.block{
+  display: block;
+}
+
+.hide{
+  display: none;
+}
+
+.keep-right{
+  text-align: right;
+}
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
 .notifications {
   animation-name: smooth-fadein-out;
   animation-duration: 10s;
