--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -30,17 +30,39 @@
     .card-title{
       min-height: 60px;
       text-align: center;
+      .title-see-more{
+        font-size: 15px;
+        text-align: right;
+        cursor: pointer;
+      }
     }
-    .activity-owner-img{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding-top: 5px;
-      img{
-        width: 50px;
-        height: 50px;
+    .card-subtitle{
+      .kpt-keep{
+        text-align: center;
+        display: block;
         margin: 5px;
-        border-radius: 10px;
+        color: blue;
+        border: 1px solid blue;
+        border-radius: 5px;
+        .keep-see-more{
+          cursor: pointer;
+        }
+      }
+      .kpt-problem{
+        text-align: center;
+        display: block;
+        margin: 5px;
+        color: red;
+        border: 1px solid red;
+        border-radius: 5px;
+      }
+      .kpt-try{
+        text-align: center;
+        display: block;
+        margin: 5px;
+        color: orange;
+        border: 1px solid orange;
+        border-radius: 5px;
       }
     }
     .activity-show-link-area{
