feature/activity-show-page

--- a/app/views/public/activities/index.html.haml
+++ b/app/views/public/activities/index.html.haml
@@ -15,9 +15,9 @@
               = image_tag 'no_image'
         .card-body.text-container
           %h5.card-title#title-js
-            - if activity.title.length > 20
+            - if activity.title.length > 13
               .title-truncated
-                = link_to activity.title.truncate(20), public_activity_path(activity), data: { 'turbolinks': false }
+                = link_to activity.title.truncate(13), public_activity_path(activity), data: { 'turbolinks': false }
                 %p.text-red.title-see-more もっと見る
               .title-untruncated.hide
                 = link_to activity.title, public_activity_path(activity), data: { 'turbolinks': false }
@@ -28,7 +28,7 @@
             - if activity.keep.length > 27
               .keep-truncated
                 = activity.keep.truncate(27)
-                %p.text-red.keep-right.cursor-pointer.keep-see-more もっと見る
+                %p.keep-see-more もっと見る
               .keep-untruncated.hide
                 = activity.keep
             - else
@@ -39,7 +39,7 @@
             - if activity.problem.length > 27
               .problem-truncated
                 = activity.problem.truncate(27)
-                %p.text-red.keep-right.cursor-pointer.problem-see-more もっと見る
+                %p.problem-see-more もっと見る
               .problem-untruncated.hide
                 = activity.problem
             - else
@@ -50,7 +50,7 @@
             - if activity.try.length > 27
               .try-truncated
                 = activity.try.truncate(27)
-                %p.text-red.keep-right.cursor-pointer.try-see-more もっと見る
+                %p.try-see-more もっと見る
               .try-untruncated.hide
                 = activity.try
             - else
@@ -60,24 +60,15 @@
           %hr
           .activity-show-link-area
             = link_to "活動報告詳細へ", public_activity_path(activity), class: "btn-info activity-show-link", data: { 'turbolinks': false }
-          - if activity.customer_id == current_customer.id
-            %hr
-            .activity-action-btn
-              = link_to '編集する', edit_public_activity_path(activity), data: { 'turbolinks': false }, class: "btn btn-success"
-              = link_to '削除する', public_activity_path(activity), method: :delete, data: { 'turbolinks': false }, class: "btn btn-danger"
           %hr
           %p.card-text
             [投稿者]
             = activity.customer.name
             %hr
-            [所属コミュニティ]
-            %br
-            - if activity.customer.communities.present?
-              - activity.customer.communities.each do |community|
-                %span 🎵
-                = community.name
-                %br
-            - else
-              所属コミュニティはありません。
+            - if activity.customer_id == current_customer.id
+              .activity-action-btn
+                = link_to '編集する', edit_public_activity_path(activity), data: { 'turbolinks': false }, class: "btn btn-success activity-edit-btn"
+                = link_to '削除する', public_activity_path(activity), method: :delete, data: { 'turbolinks': false, confirm: 'こちらの活動報告を削除します。よろしいですか？' }, class: "btn btn-danger activity-delete-btn"
+
   - else
     まだ投稿記事はありません。
