--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -37,6 +37,27 @@
       }
     }
     .card-subtitle{
+      .keep-truncated > p{
+        margin: 0 0 7px 0;
+        font-size: 15px;
+        color: red;
+        text-align: right;
+        cursor: pointer;
+      }
+      .problem-truncated > p{
+        margin: 0 0 7px 0;
+        font-size: 15px;
+        color: red;
+        text-align: right;
+        cursor: pointer;
+      }
+      .try-truncated > p{
+        margin: 0 0 7px 0;
+        font-size: 15px;
+        color: red;
+        text-align: right;
+        cursor: pointer;
+      }
       .kpt-keep{
         text-align: center;
         display: block;
@@ -44,9 +65,6 @@
         color: blue;
         border: 1px solid blue;
         border-radius: 5px;
-        .keep-see-more{
-          cursor: pointer;
-        }
       }
       .kpt-problem{
         text-align: center;
@@ -80,6 +98,7 @@
         width: 165px;
         border-radius: 10px;
         font-size: 15px;
+        margin-top: 5px;
       }
     }
   }
@@ -122,6 +141,101 @@
         bottom: 5px;
       }
     }
+  }
+}
+
+.activity-show-title{
+  text-align: center;
+  margin: 0 auto;
+  width: 90%;
+  height: 60px;
+  margin-bottom: 10px;
+  height: 100px;
+  background-color: white;
+  .activity-show-follow{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 60px;
+    margin: 0 auto;
+    border: 1px solid;
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px 0px;
+    background-color: white;
+    .activity-show-btn{
+      margin: 0 auto;
+      margin-bottom: 5px;
+      text-align: center;
+      display: inline-block;
+      width: 200px;
+      height: 40px;
+      line-height: 30px;
+      font-size: 20px;
+      color: white;
+      border-radius: 10px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .activiy-show-title{
+    .activity-show-follow{
+      .activity-show-btn{
+        width: 100px;
+        font-size: 10px;
+      }
+    }
+  }
+}
+
+.activity-show-container{
+  width: 90%;
+  margin: 0 auto;
+  .activity-show-card{
+    border: thick double lightblue;
+    .img-container{
+      width: 100%;
+      height: 300px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+    }
+    .text-container{
+      text-align: center;
+      .activity-owner-img{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 5px;
+        img{
+          width: 50px;
+          height: 50px;
+          object-fit: cover;
+          margin: 5px;
+          border-radius: 10px;
+        }
+      }
+      .card-text{
+        margin-top: 10px;
+      }
+      .activity-show-btn{
+        margin: 0 auto;
+        margin-bottom: 5px;
+        text-align: center;
+        display: block;
+        width: 200px;
+        font-size: 20px;
+        color: white;
+        border-radius: 10px;
+      }
+    }
+  }
+  .activity-show-table{
+    border: thick double lightblue;
   }
 }
 
