--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -236,6 +236,33 @@
   }
   .activity-show-table{
     border: thick double lightblue;
+    .kpt-keep{
+      width: 70px;
+      text-align: center;
+      display: inline-block;
+      margin: 5px;
+      color: blue;
+      border: 1px solid blue;
+      border-radius: 5px;
+    }
+    .kpt-problem{
+      width: 70px;
+      text-align: center;
+      display: inline-block;
+      margin: 5px;
+      color: red;
+      border: 1px solid red;
+      border-radius: 5px;
+    }
+    .kpt-try{
+      width: 70px;
+      text-align: center;
+      display: inline-block;
+      margin: 5px;
+      color: orange;
+      border: 1px solid orange;
+      border-radius: 5px;
+    }
   }
 }
 
