fix/chat_room_show_layout

--- a/app/views/public/activities/show.html.haml
+++ b/app/views/public/activities/show.html.haml
@@ -78,7 +78,7 @@
             %tr
               %th{scope:"row"} 活動報告詳細紹介
               %td
-                = html_safe_newline(@activity.introduction)
+                = simple_format(@activity.introduction)
             %tr
               %th{scope:"row"} 所属コミュニティ
               %td
