--- a/app/views/public/chat_rooms/show.html.haml
+++ b/app/views/public/chat_rooms/show.html.haml
@@ -18,7 +18,7 @@
                 - else
                   = image_tag 'no_image', class: "icon_mini"
                 %strong.do-chat
-                  = matching_customer.name + 'さんと チャットする🎵'
+                  = matching_customer.name + 'さんと チャット🎵'
             %hr
 
 
