--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -15,7 +15,7 @@
   width: 90%;
   margin: 0 auto;
   .img-container{
-    width: 255px;
+    width: 100%;
     height: 300px;
     img {
       width: 100%;
@@ -123,7 +123,7 @@
     margin: 0 auto;
     justify-content: center;
     .img-container{
-      width: 300px;
+      width: 350px;
       height: 300px;
       img {
         width: 100%;
