--- a/app/assets/stylesheets/public/communities.scss
+++ b/app/assets/stylesheets/public/communities.scss
@@ -71,8 +71,9 @@
     margin: 0 auto;
     justify-content: center;
     .img-container{
-      width: 300px;
+      width: 350px;
       height: 300px;
+      margin: 0 auto;
       img {
         width: 100%;
         height: 100%;
@@ -227,6 +228,9 @@
     .sp-serch{
       margin: 0 auto;
     }
+  }
+  .community-index-body{
+    width: 90%;
   }
 }
 
