--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -60,8 +60,9 @@
     margin: 0 auto;
     justify-content: center;
     .img-container{
-      width: 350px;
+      width: 300px;
       height: 300px;
+      margin: 15px auto 0px auto;
       img {
         width: 100%;
         height: 100%;
