--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -34,6 +34,14 @@ font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN", Meiryo, Arial, sans
   color: red; 
 }
 
+.w100{
+  width: 100%;
+}
+
+.center{
+  text-align: center;
+}
+
 .block{
   display: block;
 }
