--- a/app/views/public/customers/_index.html.haml
+++ b/app/views/public/customers/_index.html.haml
@@ -1,6 +1,6 @@
 .customer-index-container
   - customers.each do |customer|
-    .card
+    .card.w100.center
       = link_to public_customer_path(customer), data: { 'turbolinks': false } do
         .img-container
           - if customer.profile_image.present?
