--- a/app/views/public/notifications/_notification.html.haml
+++ b/app/views/public/notifications/_notification.html.haml
@@ -1,5 +1,7 @@
 - visitor = notification.visitor
 - visited = notification.visited
+- community_id = notification.community_id
+
 .col-md-6.mx-auto
   .form-inline
     %span
@@ -15,15 +17,30 @@
       - when 'follow' then
         = "あなたをフォローしました"
       - when 'chat' then
-        = "あなたにメッセージを送信しました"
+        = "あなたに"
+        = link_to public_chat_rooms_path(customer_id: visited.id), method: :post, data: { 'turbolinks': false } do
+          メッセージ
+        = "を送信しました"
+      - when 'group_chat' then
+        = "あなたの所属するコミュニティに"
+        - if ChatRoomCustomer.where(customer_id: visited.id, community_id: community_id).present?
+          = link_to 'メッセージ', community_create_public_chat_rooms_path(community_id: community_id), method: :post, data: { 'turbolinks': false }
+        = "を送信しました"
       - when 'request' then
-        = "あなたのコミュニティへ参加申請しました"
+        = "あなたの"
+        = link_to "コミュニティ", public_community_path(community_id), data: { 'turbolinks': false }
+        = "へ参加申請しました"
       - when 'request_cancel' then
-        = "あなたのコミュニティへの参加申請を取消しました"
+        = "あなたの"
+        = link_to "コミュニティ", public_community_path(community_id), data: { 'turbolinks': false }
+        = "への参加申請を取消しました"
       - when 'accept' then
-        = "コミュニティへの参加を許可しました"
+        = link_to "参加申請したコミュニティ", public_community_path(community_id), data: { 'turbolinks': false }
+        = "への参加を許可しました"
       - when 'leave' then
-        = "あなたのコミュニティから退出しました"
+        = "あなたの"
+        = link_to "コミュニティ", public_community_path(community_id), data: { 'turbolinks': false }
+        = "から退出しました"
       - when 'like' then
         = link_to 'あなたの投稿', notification.event, style: "font-weight: bold;"
         = "にいいねしました"
