--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -15,7 +15,7 @@
   width: 90%;
   margin: 0 auto;
   .img-container{
-    width: 100%;
+    width: 300px;
     height: 300px;
     img {
       width: 100%;
