--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -138,10 +138,11 @@ font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN", Meiryo, Arial, sans
 
 .registration-table{
   border: thick double lightblue;
+  margin-bottom: 100px;
   input[type="text"] {
   width: 185px;
   height: 40px;
-}
+  }
 }
 
 .registration-btn{
