--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -284,6 +284,7 @@
   margin: 0 auto;
   .activity-new-edit-table{
     border: thick double lightblue;
+    margin-bottom: 100px;
     .new-img{
       width: 300px;
       object-fit: cover;
