--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -156,6 +156,7 @@
   margin: 0 auto;
   .customer-edit-table{
     border: thick double lightblue;
+    margin-bottom: 100px;
     .edit-img{
       width: 300px;
       object-fit: cover;
