--- a/app/assets/stylesheets/public/communities.scss
+++ b/app/assets/stylesheets/public/communities.scss
@@ -133,7 +133,7 @@
   .community-show-card{
     border: thick double lightblue;
     .img-container{
-      width: 300px;
+      width: 100%;
       height: 300px;
       img {
         width: 100%;
