--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -27,6 +27,7 @@
   .text-container{
     width: 255px;
     margin-bottom: 5px;
+    text-align: center;
     .card-title{
       min-height: 60px;
       text-align: center;
@@ -93,12 +94,25 @@
       }
     }
     .activity-action-btn{
-      text-align: center;
+      margin: 0 auto;
+      width: 100px;
+      text-decoration: none;
       .btn{
         width: 165px;
         border-radius: 10px;
-        font-size: 15px;
+        font-size: 20px;
         margin-top: 5px;
+      }
+      .favorite-btn{
+        font-size: 30px;
+        color: red;
+        text-decoration: none;
+      }
+      .favorite-count{
+        display: inline-block;
+        font-size: 15px;
+        color: red;
+        text-decoration: none;
       }
     }
   }
@@ -164,17 +178,16 @@
     text-align: center;
     padding: 10px 0px;
     background-color: white;
-    .activity-show-btn{
-      margin: 0 auto;
-      margin-bottom: 5px;
-      text-align: center;
+    .favorite-btn{
+      font-size: 30px;
+      color: red;
+      text-decoration: none;
+    }
+    .favorite-count{
       display: inline-block;
-      width: 200px;
-      height: 40px;
-      line-height: 30px;
-      font-size: 20px;
-      color: white;
-      border-radius: 10px;
+      font-size: 15px;
+      color: red;
+      text-decoration: none;
     }
   }
 }
@@ -222,6 +235,12 @@
       }
       .card-text{
         margin-top: 10px;
+        .favorite-btn{
+          font-size: 20px;
+          color: red;
+          text-decoration: none;
+          display: inline-block;
+        }
       }
       .activity-show-btn{
         margin: 0 auto;
