--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -94,8 +94,6 @@
       }
     }
     .activity-action-btn{
-      margin: 0 auto;
-      width: 100px;
       text-decoration: none;
       .btn{
         width: 165px;
@@ -113,6 +111,10 @@
         font-size: 15px;
         color: red;
         text-decoration: none;
+      }
+      .favorite-message{
+        display: block;
+        font-size: 15px;
       }
     }
   }
@@ -188,6 +190,10 @@
       font-size: 15px;
       color: red;
       text-decoration: none;
+    }
+    .favorite-message{
+      display: inline-block;
+      font-size: 10px;
     }
   }
 }
