--- a/app/assets/stylesheets/public/activities.scss
+++ b/app/assets/stylesheets/public/activities.scss
@@ -240,14 +240,11 @@
           border-radius: 10px;
         }
       }
-      .card-text{
+      .got-favorite-count{
         margin-top: 10px;
-        .favorite-btn{
-          font-size: 20px;
-          color: red;
-          text-decoration: none;
-          display: inline-block;
-        }
+        font-size: 20px;
+        color: red;
+        display: inline-block;
       }
       .activity-show-btn{
         margin: 0 auto;
