--- a/app/views/public/activities/show.html.haml
+++ b/app/views/public/activities/show.html.haml
@@ -31,6 +31,10 @@
                 .activity-name
                   = @activity.customer.name
             %hr
+            .got-favorite-count
+              いいね数
+              %i.fa-solid.fa-heart
+              = @activity.favorites.count
 
     .col-md-9
       %table.table.table-striped.activity-show-table{:width=>"100%",:border=>"1"}
