--- a/app/views/public/notifications/_notification.html.haml
+++ b/app/views/public/notifications/_notification.html.haml
@@ -3,6 +3,8 @@
 - if notification.community_id.present?
   - community_id = notification.community_id
   - community = Community.find(community_id)
+- if notification.activity_id.present?
+  - activity_id = notification.activity_id
 
 .col-md-6.mx-auto
   .form-inline
@@ -40,8 +42,8 @@
       - when 'leave' then
         = link_to community.name, public_community_path(community_id), data: { 'turbolinks': false }
         = "から退出しました"
-      - when 'like' then
-        = link_to 'あなたの投稿', notification.event, style: "font-weight: bold;"
+      - when 'favorite' then
+        = link_to 'あなたの投稿', public_activity_path(activity_id), style: "font-weight: bold;"
         = "にいいねしました"
       - when 'comment' then
         - if notification.event.customer_id == visited.id
