--- a/app/views/public/notifications/_notification.html.haml
+++ b/app/views/public/notifications/_notification.html.haml
@@ -43,8 +43,11 @@
         = link_to community.name, public_community_path(community_id), data: { 'turbolinks': false }
         = "から退出しました"
       - when 'favorite' then
-        = link_to 'あなたの投稿', public_activity_path(activity_id), style: "font-weight: bold;"
+        = link_to 'あなたの投稿', public_activity_path(activity_id), data: { 'turbolinks': false }, style: "font-weight: bold;"
         = "にいいねしました"
+      - when 'activity' then
+        = link_to '活動報告', public_activity_path(activity_id), data: { 'turbolinks': false }, style: "font-weight: bold;"
+        = "を投稿しました"
       - when 'comment' then
         - if notification.event.customer_id == visited.id
           = link_to "あなたのイベント", notification.event, style: "font-weight: bold;"
